app/css/obsadmin.css
/* ... */
.rt-td {
  text-align: center;
}

.patient-header {
  text-align: center;
  padding-top: 15px;
  padding-bottom: 15px;
  font-size: 24px;
  color: #fff;
  background: #363463;
}

.collapsible-header {
  text-align: center;
  padding-top: 15px;
  padding-bottom: 15px;
  font-size: 24px;
  color: #fff;
  background: #363463;
  margin-top: 10px;
  margin-bottom: 10px;
}

.Collapsible {
  background-color: white;
  }

.Collapsible__contentInner {
  padding: 10px;
  border: 1px solid #ebebeb;
  border-top: 0;
  }

.Collapsible__contentInner p {
  margin-bottom: 10px;
  font-size: 14px;
  line-height: 20px;
}

.Collapsible__contentInner p:last-child {
  margin-bottom: 0;
}

.Collapsible__trigger {
  display: block;
  font-weight: 400;
  text-decoration: none;
  color: #363463 !important;
  position: relative;
  border: 1px solid white;
  padding: 10px;
  background: #D3D3D3;
  color: white;
  }

.Collapsible__trigger:after {
  font-family: 'Glyphicons Halflings';
  content: '\e252';
  position: absolute;
  right: 10px;
  top: 10px;
  display: block;
  transition: transform 300ms;
  }

.Collapsible__trigger.is-open:after {
  transform: rotateZ(180deg);
  }

.Collapsible__trigger.is-disabled {
  opacity: 0.5;
  background-color: grey;
  }

.CustomTriggerCSS {
  background-color: lightcoral;
  transition: background-color 200ms ease;
  }

.CustomTriggerCSS--open {
  background-color: #363463 ;
  color: #FFF !important;
  }

.collapsible-header-top {
  margin-top: 20px;
}

#deletePatient{
    float: right;
}

.card-block {
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1.25rem;
}

.card {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,.125);
  border-radius: .25rem;
}
.borderless{
    border: none !important;
}

.borderless{
    border: none !important;
}

.card-footer:last-child {
  border-radius: 0 0 calc(.25rem - 1px) calc(.25rem - 1px);
}

.text-muted {
  color: #636c72!important;
}

.card-footer {
  padding: .75rem 1.25rem;
  background-color: #f7f7f9;
  border-top: 1px solid rgba(0,0,0,.125);
}

.card-header:first-child {
  border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
}

.card-header {
  padding: .75em 1.25rem;
  margin-bottom: 0;
  background-color: #f7f7f9;
  border-bottom: 1px solid rgba(0,0,0,.125);
}
.card-header.transparent{
  background-color: transparent;
  border-bottom: none;
}
.preferred{
  display: block;
  margin-left: 0%;
}

.deleted {
  width: 50%;
  float: right;
}

.badge-info {
  background-color: #5cb85c;
  margin-top: -10px;
}

.badge-no-color {
  background-color: #f7f7f9;
  color: #f7f7f9;
}

.badge-error {
  background-color:red;
  margin-top: -10px;
  padding-left: 10px;
  padding-right: 10px;
}

.deleted .badge-error {
  background-color:red;
  margin-top: -10px;
  padding-left: 25px;
  padding-right: 25px;
}

.card-plain {
  padding-left: 15px;
  margin-bottom: 15px;
}

.editCard{
  width: 100%;
}

.card1{
  width:33%;
  height: 100%;
  float:left;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  margin-top: 1%;
  margin-left: 2%;
  text-align: auto;
  align-items: left;
}

.card1.full-width{
  width: 100%;
  float: none;
  box-shadow: none;
}

.full-size{
  width: 100%;
}


.viewCard{
  width: 22%;
  height: 5.5em;
  max-height: 40%;
  float:left;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  margin: 10px 15px 10px 15px;
  text-align: auto;
  align-items: left;
  padding: .5%;
  border-radius:5%;
}
.demographicsCard {
   width: 23%;
   height: 6em;
   max-height: 40%;
   float:left;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
   margin-left: 3%;
   margin-right: 2%;
   margin-bottom: 5%;
   text-align: auto;
   align-items: left;
   padding: .4%;
   border-radius:5%;
}

.card-body{
  text-indent: 0%;
  justify-content: space-between;
  margin: 0;
  width: 100%;
  margin-bottom: 0%;
}

#buttons{
  margin: auto;
  margin-top:5%;
  width:100%;
  height: 10%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

button.btn.btn.success{
  padding: 6% 12%;
}

.btn-margin{
  margin-left: 0px;
}

.close{
  position: relative;
  margin-right: 3px;
  top: 13px;
  right:2%;
  color: red;
  display: block;
  font-size: 35px;
  line-height: 0px;
  opacity: 1;
}

a{
  color: #337ab7;
  cursor: pointer;
}

.arrange-horizontally > * {
  display: inline-block;
}

.btn-margin {
  margin-bottom: 15px;
  margin-top: 25px;
}

.glyphicon {
  color: black;
  font-size: 12px;
}

.encounter{
  margin-bottom: 10px;
}

.provider{
  margin-bottom: 10px;
}

.encounter-header {
    text-align: left;
    color: #fff;
    background-color: #00463f;
    min-height: 35px;
    padding-top: 1%;
   text-indent: 50px;
    margin-bottom: 3%
}

.form-horizontal{
  margin-left: 2%;
}

.encounter-form{
    width: 70%;
    height: 80%;
    margin-top: 3%;
    text-align: right;
}

#selectedPatient{
  display: block;
}

.glyphicon {
  color: black;
  font-size: 12px;
}

.modal-dialog{
  width: 35%;
}

.modal-header{
  background-color: #D3D3D3;
  color: black;
}

#button{
  margin-left: 20%;
}

.custom-label{
  text-align: left !important;
}

.pointer {
  cursor: pointer;
}

.nav-tabs .nav-link.active {
  color:#00688B;
  text-decoration: underline;
  background-color: #a6c;
  font-weight: bold;
  background-color: #fff;
  border-color: #ddd #ddd #fff;
}

#custom-a-tag a {
  color: #337ab7;
  cursor: pointer;
}

#bolded-a-tag {
  color: #054b63;
  cursor: pointer;
  font-weight: bold;
}

#disable-manual-input .form-control[disabled]{
  background-color: hsl(0, 0%, 100%);
  opacity: 1;
}

li>a:hover {
    color: #337ab7;
    cursor: pointer;
    text-decoration: none;
    border-bottom: 1px solid gold;
}

.input {
  float:left;
  color: #FF0000;
}

.has-error {
  color: #FF0000;
}
/* ... */

